# ProxyMaze-Phase1

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  schemas.py
app/api/: deps.py  routes.py
app/core/: __init__.py  ids.py  state.py  time.py
app/formatters/: __init__.py  discord.py  slack.py
app/services/: __init__.py  alerts.py  integrations.py  metrics.py  proxies.py  webhooks.py
app/workers/: __init__.py  delivery.py  monitor.py
tests/: test_main.py
